--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="main.js"></script>
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.1.umd.min.js"
-        type="application/javascript"></script>
+
 	<title>Voting DAPP</title>
 	<style>
 
@@ -152,5 +151,9 @@
         <p id="status"></p>
         <p id="time"></p>
     </div>
+
+    <script src="main.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.7.1.umd.min.js"
+        type="application/javascript"></script>
 </body>
 </html>
